force-app/main/default/objects/OperatingHours__c/OperatingHours__c.object-meta.xml
<CustomObject>
    <label>운영시간</label>
    <nameField>
        <label>요일</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>운영시간</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>