force-app/main/default/objects/OperatingHours__c/fields/EndOperation__c.field-meta.xml
<CustomField>
    <fullName>EndOperation__c</fullName>
    <label>마감 시간</label>
    <type>Time</type>
</CustomField>