force-app/main/default/objects/OperatingHours__c/fields/OperationRepairShop__c.field-meta.xml
<CustomField>
    <fullName>OperationRepairShop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>정비소</label>
    <referenceTo>Repair_Shop__c</referenceTo>
    <relationshipLabel>운영시간</relationshipLabel>
    <relationshipName>OperationRepairShop</relationshipName>
    <type>Lookup</type>
</CustomField>