force-app/main/default/objects/OperatingHours__c/fields/StartOperation__c.field-meta.xml
<CustomField>
    <fullName>StartOperation__c</fullName>
    <label>오픈 시간</label>
    <type>Time</type>
</CustomField>