force-app/main/default/objects/OperatingHours__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>StartOperation__c</columns>
    <columns>EndOperation__c</columns>
    <columns>OperationRepairShop__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>